# Online-store-Megano-

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TEST  __init__.py  css  docker-compose.yaml  pyproject.toml
diploma-frontend/: MANIFEST.in  README.md  setup.cfg  setup.py
diploma-frontend/diploma_frontend.egg-info/: SOURCES.txt
diploma-frontend/frontend/: __init__.py  apps.py  urls.py  views.py
diploma-frontend/swagger/: swagger.yaml
fixtures/: auth-users-fixtures.json  myauth-profiles-fixtures.json  shop-categories-fixtures.json  shop-products-fixtures.json  shop-reviews-fixtures.json  shop-specifications-fixtures.json  shop-tags-fixtures.json
media_uploads/images_None/category/: Пряники.jfif  Торты_и_пирожные_4bwGy6Z.jfif  Хлеб.jfif  Хлебобулочные_q197tDW.jfif  мороженное_z5hkRwu.jfif  торты_ddFOFDD.jfif
media_uploads/images_None/product/: Бородинский_xwQRErJ.jfif  Даниловский_DTGiyZv.jfif  Имбирные_lkvWRpC.jfif  Прага_от_Палыча_x389RA9.jfif  пломбир1.jfif  пломбир2.jfif  тульский.jfif
mysite/: __init__.py  create_superuser.py
mysite/myauth/: __init__.py  admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
mysite/myauth/_views/: __init__.py  login_api.py  login_view.py  logout_api.py  logout_view.py  password_view.py  personal_view.py  profile_api.py  profile_avatar_api.py  profile_password_api.py  profile_status_api.py  profile_view.py  register_api.py  register_view.py
mysite/myauth/forms/: avatar_update_form.py  password_update_form.py  profile_update_form.py  user_login_form.py  user_register_form.py
mysite/myauth/migrations/: 0001_initial.py  0002_alter_profile_options.py  0003_alter_profile_avatar.py  0004_profile_is_deleted.py  __init__.py
mysite/myauth/serialization/: __init__.py  avatar_serializer.py  profile_avatar_serializer.py  profile_create_update_serializer.py  profile_serializer.py  sign_up_serializer.py
mysite/myauth/tests/: __init__.py  test_auth.py
mysite/mysite/: middleware.py  settings.py  urls.py
mysite/shop/: __init__.py  admin.py  apps.py  models.py  product_mixin.py  signals.py  urls.py  views.py
mysite/shop/_admin/: __init__.py  cart.py  delivery.py  image_mixin.py  order.py  payment.py  product.py  sale.py  soft_delete_mixin.py
mysite/shop/_models/: __init__.py  cart_item_model.py  cart_model.py  category_model.py  delivery_fee_model.py  order_item_model.py  order_model.py  payment_model.py  product_image_model.py  product_model.py  review_model.py  sale_model.py  session_key_mixin.py  soft_delete_model.py  specification_model.py  tag_model.py
mysite/shop/_views/: __init__.py  banners_api.py  basket_api.py  catalog_api.py  categories_api.py  history_orders_api.py  limit_products_api.py  order_api.py  order_by_id_api.py  payment_api.py  payment_order_api.py  product_create.py  product_detail_api.py  product_popular_api.py  product_return.py  product_soft_delete.py  product_update.py  products_table_view.py  review_api.py  sale_api.py  tag_api.py
mysite/shop/forms/: __init__.py  order_form.py  (+8 more)
nginx/: __init__.py  nginx.conf
templetes/: profile_forms.html
(+80 files in other folders)
